fix(chip): "overflow-y: auto" hides the scrollbar when not needed

--- a/src/app/chip/chip.component.scss
+++ b/src/app/chip/chip.component.scss
@@ -10,7 +10,7 @@
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
-    overflow: scroll;
+    overflow-y: auto;
     overflow-x: hidden;
     height: 650px;
 }
